tests/errors/undefined_field.orus
struct Foo { a: i32 }
let f: Foo = Foo{a: 1}
print(f.b)
